--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,62 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+}
+
+#title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#page {
+  width: 100%;
+  background-color: rgb(247, 189, 189);
+  display: flex;
+  justify-content: space-between;
+}
+
+#connect {
+  width: 80px;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 0.3em;
+}
+
+#chat {
+  display: flex;
+  flex-direction: column;
+}
+
+#msg {
+  height: 70vh;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  background-color: rgb(191, 191, 243);
+}
+
+#msg>p {
+  text-align: left;
+  margin: 10px 50px 0 10px;
+  padding: 5px;
+  border-radius: 8px;
+  background-color: rgb(216, 220, 255);
+}
+
+#msg>p.fromUser {
+  text-align: right;
+  margin: 10px 10px 0 50px;
+}
+
+#chatbox {
+  height: 30px;
 }
