--- a/src/index.css
+++ b/src/index.css
@@ -18,17 +18,29 @@ body {
 
 #page {
   width: 100%;
-  background-color: rgb(247, 189, 189);
+  background-color: rgb(224, 224, 224);
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 #info {
   width: 100%;
+  height: 20vh;
+  background-color: rgb(196, 236, 255);
   display: flex;
-  flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+
+#namePlaceholderParent {
+  text-align: center;
+  width: 200px;
+}
+
+#statusParent {
+  text-align: center;
+  width: 140px;
 }
 
 .bar {
@@ -50,21 +62,22 @@ body {
 }
 
 .disconnect {
-  background-color: rgb(250, 177, 240);
+  background-color: rgb(250, 177, 177);
 }
 
 #chat {
+  height: 80vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 #msg {
-  height: 70vh;
-  width: 50vw;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: start;
-  background-color: rgb(191, 191, 243);
+  background-color: rgb(191, 192, 243);
   overflow-y: scroll;
 }
 
