--- a/src/index.css
+++ b/src/index.css
@@ -82,8 +82,9 @@ body {
 }
 
 #msg>p {
+  position: relative;
   text-align: left;
-  margin: 10px 50px 0 10px;
+  margin: 10px 70px 0 15px;
   padding: 7px;
   border-radius: 8px;
   background-color: rgb(216, 220, 255);
@@ -92,7 +93,37 @@ body {
 
 #msg>p.fromUser {
   text-align: right;
-  margin: 10px 10px 0 50px;
+  margin: 10px 15px 0 70px;
+}
+
+#msg>p.fromOther:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 13px solid transparent;
+	border-right-color: rgb(216, 220, 255);
+	border-left: 0;
+	border-bottom: 0;
+	margin-top: -2px;
+	margin-left: -12px;
+}
+
+#msg>p.fromUser:after {
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 13px solid transparent;
+	border-left-color: rgb(216, 220, 255);
+	border-right: 0;
+	border-bottom: 0;
+	margin-top: -2px;
+	margin-right: -12px;
 }
 
 #chatbox {
