--- a/src/index.css
+++ b/src/index.css
@@ -79,51 +79,55 @@ body {
   justify-content: start;
   background-color: rgb(191, 192, 243);
   overflow-y: scroll;
+  padding-top: 10px;
 }
 
 .msg {
   position: relative;
-  text-align: left;
-  margin: 10px 70px 0 15px;
   padding: 7px;
   border-radius: 8px;
   background-color: rgb(216, 220, 255);
   word-wrap: break-word
 }
 
+.msg.fromOther {
+  text-align: left;
+  margin: 0px 70px 10px 15px;
+}
+
 .msg.fromUser {
   text-align: right;
-  margin: 10px 15px 0 70px;
+  margin: 0px 15px 10px 70px;
 }
 
 .msg.fromOther:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 50%;
-	width: 0;
-	height: 0;
-	border: 13px solid transparent;
-	border-right-color: rgb(216, 220, 255);
-	border-left: 0;
-	border-bottom: 0;
-	margin-top: -2px;
-	margin-left: -12px;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 13px solid transparent;
+  border-right-color: rgb(216, 220, 255);
+  border-left: 0;
+  border-bottom: 0;
+  margin-top: -2px;
+  margin-left: -12px;
 }
 
 .msg.fromUser:after {
-	content: '';
-	position: absolute;
-	right: 0;
-	top: 50%;
-	width: 0;
-	height: 0;
-	border: 13px solid transparent;
-	border-left-color: rgb(216, 220, 255);
-	border-right: 0;
-	border-bottom: 0;
-	margin-top: -2px;
-	margin-right: -12px;
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 13px solid transparent;
+  border-left-color: rgb(216, 220, 255);
+  border-right: 0;
+  border-bottom: 0;
+  margin-top: -2px;
+  margin-right: -12px;
 }
 
 #chatbox {
