--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
 
 #page {
   width: 100%;
-  background-color: rgb(224, 224, 224);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -27,7 +26,7 @@ body {
 #info {
   width: 100%;
   height: 20vh;
-  background-color: rgb(196, 236, 255);
+  background-color: rgb(204, 207, 231);
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -53,16 +52,29 @@ body {
 .btn {
   width: 80px;
   height: 40px;
-  border: 1px solid black;
+  border: none;
+  color: black;
+  background-color: white;
   border-radius: 0.3em;
+  transition-duration: 0.4s;
 }
 
 .connect {
-  background-color: rgb(177, 250, 177);
+  border: 2px solid #04AA6D; /* Green */
+}
+
+.connect:hover {
+  background-color: #04AA6D; /* Green */
+  color: white;
 }
 
 .disconnect {
-  background-color: rgb(250, 177, 177);
+  border: 2px solid #f44336; /* Green */
+}
+
+.disconnect:hover {
+  background-color: #f44336; /* Green */
+  color: white;
 }
 
 #chat {
@@ -77,7 +89,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  background-color: rgb(191, 192, 243);
+  background-color: rgb(248, 248, 248);
   overflow-y: scroll;
   padding-top: 10px;
 }
@@ -86,16 +98,18 @@ body {
   position: relative;
   padding: 7px;
   border-radius: 8px;
-  background-color: rgb(216, 220, 255);
   word-wrap: break-word
 }
 
 .msg.fromOther {
+  background-color: rgb(231, 232, 243);
+
   text-align: left;
   margin: 0px 70px 10px 15px;
 }
 
 .msg.fromUser {
+  background-color: rgb(216, 220, 255);
   text-align: right;
   margin: 0px 15px 10px 70px;
 }
@@ -108,7 +122,7 @@ body {
   width: 0;
   height: 0;
   border: 13px solid transparent;
-  border-right-color: rgb(216, 220, 255);
+  border-right-color: rgb(231, 232, 243);
   border-left: 0;
   border-bottom: 0;
   margin-top: -2px;
