--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,6 @@ body {
   width: 20px;
 }
 
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
 ::-webkit-scrollbar-thumb {
   background-color: rgb(168, 160, 172);
   border-radius: 20px;
@@ -80,20 +76,20 @@ body {
 }
 
 .connect {
-  border: 2px solid #04AA6D; /* Green */
+  border: 2px solid #04AA6D;
 }
 
 .connect:hover {
-  background-color: #04AA6D; /* Green */
+  background-color: #04AA6D;
   color: white;
 }
 
 .disconnect {
-  border: 2px solid #f44336; /* Green */
+  border: 2px solid #f44336;
 }
 
 .disconnect:hover {
-  background-color: #f44336; /* Green */
+  background-color: #f44336;
   color: white;
 }
 
@@ -113,18 +109,32 @@ body {
   background-color: rgb(46, 44, 46);
   overflow-y: scroll;
   padding-top: 10px;
+  padding-left: 20px;
+}
+
+.msgParent {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.msgParent.fromOther {
+  justify-content: start;
+}
+
+.msgParent.fromUser {
+  justify-content: end;
 }
 
 .msg {
   position: relative;
   padding: 7px;
   border-radius: 8px;
-  word-wrap: break-word
+  word-wrap: break-word;
 }
 
 .msg.fromOther {
   background-color: rgb(125, 98, 138);
-
   text-align: left;
   margin: 0px 70px 10px 15px;
 }
